--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
@@ -19,11 +19,9 @@
                     <button type="button" class="close" data-dismiss="modal"><span>X</span></button>
                 </div>
                 <div class="modal-body">
-                    @*<div id="errorAlert" class="alert alert-danger collapse">
-                            <button type="button" class="close" data-dismiss="alert"><span>X</span></button>
-                            <strong> Hiba! </strong> Rossz, vagy nem megfelelő adatokat akarsz megadni! Helyesen tölts ki minden kötelező mezőt!
-                        </div>*@
-                    <div id="errorAlert" class="text-danger"></div>
+                    <div id="errorAlert" class="collapse">
+                        <span class="text-danger" id="errormessage"></span>
+                    </div>
                     <div class="form-group">
                         <input type="hidden" asp-for="CourseId" class="form-control" value="@Model.CourseId" />
                         <input type="hidden" asp-for="SubjectId" class="form-control" value="@Model.SubjectId" />
