--- a/Kurzusok/Kurzusok/Views/Administration/_AdminLayout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/_AdminLayout.cshtml
@@ -10,6 +10,7 @@
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item"> <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="Index">Felhasználói szintek</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Új felhasználó regisztrálása</a></li>
+                <li class="nav-item"> <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="DeleteAccounts">Felhasználók törlése</a></li>
             </ul>
         </div>
         <div class="col-md-9">
