--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     List<string> whoCommented = new List<string>();
     string commentHelper, displayComment;
 }
-
+@*Félév törlés, tábla nyitás*@
 <div class="container-fluid">
     <h1>@date félév</h1>
     <h3>@training tagozat</h3>
