Steal data from széchenyi website

--- a/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                                 <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="Index">Adminisztráció</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Curriculum" asp-action="Index">Mintatantervek</a>
+                                <a class="nav-link" asp-area="" asp-controller="Syllabus" asp-action="Index">Mintatantervek</a>
                             </li>
                         }
                         <li class="nav-item">
