--- a/Kurzusok/Kurzusok/Views/Syllabus/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Syllabus/Index.cshtml
@@ -1,23 +1,38 @@
-﻿@model Kurzusok.ViewModels.CurriculumViewModel;
-@using Microsoft.AspNetCore.Http;
+﻿@model Kurzusok.ViewModels.SyllabusViewModel
+@using Microsoft.AspNetCore.Http
 @{
     ViewData["Title"] = "Mintatantervek";
-    string currentCurrId = Model.CurrentCurriculum.ProgrammeId.ToString();
-    string CurrentCurriculumName = Model.CurrentCurriculum.Name + Model.CurrentCurriculum.Training;
-    string training = Model.CurrentCurriculum.Training;
+    string currentSyllabusId = Model.CurrentSyllabus.ProgrammeId.ToString();
+    string currentSyllabusName = Model.CurrentSyllabus.Name +" "+ Model.CurrentSyllabus.Training;
+    string training = Context.Session.GetString("Training");
+    if (string.IsNullOrEmpty(training))
+    {
+        training = "Nappali";
+        Context.Session.SetString("Training", "Nappali");
+    }
 
 }
 <div class="container-fluid">
     <h1>Mintatantervek</h1>
 
-    <h1>@CurrentCurriculumName tanterv</h1>
+    <h1>@currentSyllabusName tanterv</h1>
 
-    @if (User.IsInRole("Admin"))
+    @*<a class="btn btn-danger" data-toggle="modal" data-target="#applySemesterDelete">Félév törlése</a>*@
+<form class="form-group d-flex pt-3" asp-controller="Syllabus" asp-action="ReadFromWeb">
+    <input class="form-control w-25" type="url" id="tableUrl" placeholder="Adja meg a felvenni kívánt mintatanterv URL-jét (it.sze.hu-ról)" title="Adja meg a felvenni kívánt mintatanterv URL-jét (it.sze.hu-ról)" name="url" />
+    <input type="hidden" name="id" value="@currentSyllabusId" />
+    @if (training == "Nappali")
     {
-        @*<a class="btn btn-danger" data-toggle="modal" data-target="#applySemesterDelete">Félév törlése</a>*@
-        <button type="button" class="btn btn-primary" data-toggle="subject-modal" data-target="#addSubject" id="createsubject" data-url="@Url.Action("CreateSubject")" data-id="@currentCurrId">Tárgy hozzáadása a mintatantervhez</button>
+        <input type="hidden" name="training" value="full" />
+    }
+    else
+    {
+        <input type="hidden" name="training" value="part" />
     }
 
+    <button type="submit" class="btn btn-primary ml-1">Felvétel</button>
+</form>
+    <button type="button" class="btn btn-primary" data-toggle="subject-modal" data-target="#addSubject" id="createsubject" data-url="@Url.Action(" CreateSubject")" data-id="@currentSyllabusId">Tárgy felvétele a mintatantervhez manuálisan</button>
 </div>
 <div id="PlaceHolderHere"></div>
 
@@ -25,15 +40,15 @@
     <table class="table">
         <thead class="thead-light">
             <tr>
-                @if (User.IsInRole("Admin"))
-                {
-                    <th scope="col"></th>
-                }
+                <th scope="col"></th>
                 <th scope="col">
                     Tárgy kód
                 </th>
                 <th scope="col">
                     Név
+                </th>
+                <th scope="col">
+                    Tárgy típus
                 </th>
                 <th scope="col">
                     Órák
@@ -44,14 +59,12 @@
                 <th scope="col">
                     Ajánlott félév
                 </th>
-                <th scope="col">
-                    Kötelező
-                </th>
+
 
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.CurrentCurriculum.ProgrammeDetails)
+            @foreach (var item in Model.CurrentSyllabus.ProgrammeDetails)
             {
 
                 <tr class="newSubject border-bottom">
@@ -73,9 +86,21 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
+
+                        @if (item.Obligatory == true)
+                        {
+                            @Html.Raw("Kötelező")
+                        }
+                        else
+                        {
+                            @Html.Raw("Választható szakmai")
+                        }
+                        <br />
+                    </td>
+                    <td>
                         @if (training == "Levelezős")
                         {
-                            @*@Html.DisplayFor(modelItem => item.correspond)*@
+                            @Html.DisplayFor(modelItem => item.CorrespondHours)
                         }
                         else
                         {
@@ -106,22 +131,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.RecommendedSemester)
                     </td>
-                    <td>
-
-                        @if (item.Obligatory == true)
-                        {
-                            @Html.Raw("Igen")
-                        }
-                        else
-                        {
-                            @Html.Raw("Nem")
-                        }
-                        <br />
-
-                    </td>
-
                 </tr>
-
             }
         </tbody>
     </table>
@@ -140,17 +150,17 @@
                 </form>
             </li>
             <li class="nav-item pb-1 height">
-                @if (Model.CurriculmList.Count > 1)
+                @if (Model.SyllabusList.Count > 1)
                 {
                     <a class="nav-link text-dark dropdown-toggle pl-1 py-0 d-inline" id="dropdownMenuSemester" data-toggle="dropdown">
-                        @CurrentCurriculumName
+                        @currentSyllabusName
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" role="menu">
-                        @foreach (var item in Model.CurriculmList)
+                        @foreach (var item in Model.SyllabusList)
                         {
-                            if (currentCurrId != Convert.ToString(item.ProgrammeId))
+                            if (currentSyllabusId != Convert.ToString(item.ProgrammeId))
                             {
-                                <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentProgrammesId="@item.ProgrammeId" onclick="clearCollapse()">@item.Name @item.Training</a>
+                                <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentSyllabusId="@item.ProgrammeId">@item.Name @item.Training</a>
                             }
                         }
                     </div>
@@ -158,7 +168,7 @@
                 else
                 {
                     <p class="text-dark pl-1 py-0 d-inline">
-                        @CurrentCurriculumName
+                        @currentSyllabusName
                     </p>
                 }
 
