Js and modal fixes

--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -663,7 +663,7 @@
                 @foreach (var course in item.Courses.Skip(1))
                 {
                     <tr class="border-bottom">
-                        <td class="border-left">
+                        <td class="border-left-3">
                             @Html.DisplayFor(modelItem => course.CourseCode)
                         </td>
                         <td>
