--- a/Kurzusok/Kurzusok/Views/Home/_SubjectModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_SubjectModalPartial.cshtml
@@ -95,7 +95,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Bezárás</button>
                     <div class="form-group">
-                        <input type="submit" value="Mentés és tovább" class="btn btn-primary" />
+                        <input type="submit" value="Mentés és tovább" id="saveandnext" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
