--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
@@ -47,7 +47,7 @@
                     {
                         <div class="form-group">
                             <label asp-for="Hours">Óraszám</label>
-                            <input asp-for="Hours" class="form-control" min="0" required />
+                            <input asp-for="Hours" class="form-control" min="0" />
                             <span asp-validation-for="Hours" class="text-danger"></span>
                         </div>
                     }
