creating subject function for syllabus

--- a/Kurzusok/Kurzusok/Views/Syllabus/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Syllabus/Index.cshtml
@@ -27,7 +27,7 @@
 
         <button type="submit" class="btn btn-primary ml-1">Felvétel</button>
     </form>
-    <button type="button" class="btn btn-primary" data-toggle="subject-modal" data-target="#addSubject" id="createsubject" data-url="@Url.Action(" CreateSubject")" data-id="@currentSyllabusId">Tárgy felvétele a mintatantervhez manuálisan</button>
+    <button type="button" class="btn btn-primary" data-toggle="subject-modal" data-target="#addSubject" id="createsubject" data-url="@Url.Action("CreateSubjectToSyllabus")" data-id="@currentSyllabusId">Tárgy felvétele a mintatantervhez manuálisan</button>
 </div>
 <div id="PlaceHolderHere"></div>
 
