--- a/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8-hu" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" asp-append-version="true" runat="server" />
