--- a/Kurzusok/Kurzusok/Views/Syllabus/_CreateSubjectToSyllabus.cshtml
+++ b/Kurzusok/Kurzusok/Views/Syllabus/_CreateSubjectToSyllabus.cshtml
@@ -4,11 +4,14 @@
     string training = Context.Session.GetString("Training");
 }
 
-<div class="modal subjectmodal" id="addSubject">
+<div class="modal syllabussubjectmodal" id="addSubject">
     <div class="modal-dialog">
-        <form asp-action="CreateSubjectPost" onsubmit="return ajaxpostBasic(this);">
+        <form asp-action="CreateSubjectToSyllabusPost" onsubmit="return ajaxpostBasic(this);">
             <div class="modal-content">
                 <div class="modal-header">
+
+
+
 
                     <h4 class="modal-title" id="addSubjectLabel">Tárgy hozzáadása a mintatantervhez</h4>
                     <button type="button" class="close" data-dismiss="modal"><span>X</span></button>
@@ -35,39 +38,49 @@
                     {
                         <div class="form-group">
                             <label asp-for="EHours" class="control-label">Elméleti órák száma</label>
-                            <input asp-for="EHours" class="form-control" min="0" />
+                            <input asp-for="EHours" class="form-control" min="0" value="0" />
                             <span asp-validation-for="EHours" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="GyHours" class="control-label">Gyakorlati órák száma</label>
-                            <input asp-for="GyHours" class="form-control" min="0" />
+                            <input asp-for="GyHours" class="form-control" min="0" value="0"/>
                             <span asp-validation-for="GyHours" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="LabHours" class="control-label">Labor órák száma</label>
-                            <input asp-for="LabHours" class="form-control" min="0" />
+                            <input asp-for="LabHours" class="form-control" min="0" value="0"/>
                             <span asp-validation-for="LabHours" class="text-danger"></span>
                         </div>
                     }
-                    @*else
-                        {
-                            <div class="form-group">
-                                <label asp-for="CorrespondHours" class="control-label">Órák száma</label>
-                                <input asp-for="CorrespondHours" class="form-control" min="0" />
-                                <span asp-validation-for="CorrespondHours" class="text-danger"></span>
-                            </div>
-                        }*@
+                    else
+                    {
+                        <div class="form-group">
+                            <label asp-for="CorrespondHours" class="control-label">Órák száma</label>
+                            <input asp-for="CorrespondHours" class="form-control" min="0" />
+                            <span asp-validation-for="CorrespondHours" class="text-danger"></span>
+                        </div>
+                    }
                     <div class="form-group">
-                        <label asp-for="Credit" class="control-label">Labor órák száma</label>
-                        <input asp-for="Credit" class="form-control" min="0" />
+                        <label asp-for="Credit" class="control-label">Ajánlott félév</label>
+                        <input asp-for="Credit" class="form-control" min="0" max="7" />
                         <span asp-validation-for="Credit" class="text-danger"></span>
                     </div>
-                    <
+                    <div class="form-group">
+                        <label asp-for="RecommendedSemester" class="control-label">Ajánlott félév</label>
+                        <input asp-for="RecommendedSemester" class="form-control" min="0" max="7" />
+                        <span asp-validation-for="RecommendedSemester" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Obligatory">Kötelező tantárgy?</label>
+                        <input asp-for="Obligatory" class="form-control" />
+                        <span asp-validation-for="Obligatory" class="text-danger"></span>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Bezárás</button>
                     <div class="form-group">
-                        <input type="submit" value="Mentés és tovább" class="btn btn-primary" />
+                        <input type="submit" value="Mentés" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
